kubernetes-manifests/network/network-policy.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: network-policy-ingress
  namespace: forecaster
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - localhost
      secretName: default-server-secret
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 80
